CSS tweaks - Fix text centering vertically list view - Fixed list view preview thumbnail > preview is position better and border-radius adjust. Is cut off any more - Added link for chrome extension in helpcenter - Styled about links - Fixed vertically centering text outliner
* Tags still dont show consistent. In the search input they are good, in the content area the text is pushed down. In the inspector they seem good as well. The tags in the content area show same height as in search input, but they are different in height. I guess due to that remove/close icon

--- a/resources/style/content.scss
+++ b/resources/style/content.scss
@@ -46,9 +46,10 @@
   transition: background-color 0.2s $pt-transition-cubic2;
 
   // This acts as the border-radius, but also for child elements
+  // replaced with border-radius > this causes issues with scale;
   :first-child {
-    clip-path: inset(0 round 0.125rem);
-    transition: clip-path 0.2s $pt-transition-cubic2;
+    // clip-path: inset(0 round 0.125rem);
+    // transition: clip-path 0.2s $pt-transition-cubic2;
     pointer-events: none;
   }
 
@@ -61,6 +62,9 @@
     display: block;
     border-radius: 0.25rem;
   }
+  &:hover>img {
+    border-radius: .1rem !important; //Fixes the cutoff bottom and raius
+  } 
 
   &[data-dnd-target='true'] {
     background-color: var(--accent-color-yellow);
@@ -187,6 +191,14 @@
       &:not(:first-child) {
         overflow: hidden;
       }
+      &:last-child {
+        padding-bottom: 2px;
+      }
+      
+      &:not(:first-child):not(:last-child) {
+      height: 24px;
+      padding-top: 2px;
+      }
 
       > .filename {
         display: inline-block;
@@ -194,7 +206,8 @@
         overflow: hidden;
         text-overflow: ellipsis;
         max-width: calc(100% - 32px); // minus thumbnail and some padding
-        margin-top: 4px; // align with other text cells
+        margin-top: 1px; // align with other text cells
+        margin-left: 4px;
         padding: 2px;
       }
 
@@ -223,19 +236,37 @@
   .thumbnail {
     align-self: center;
     display: inline-block;
-
     img {
       transition: transform 0.2s ease;
       transform-origin: top left;
     }
     &:hover {
       img {
-        transform: scale(10);
         z-index: 9000; // >:)
         position: relative;
         border: unset;
         // object-fit: contain; // would be nice, but not sure how to align to top left
       }
+    }
+    
+  }
+  // Last 4
+  [role="row"]:nth-last-child(-n + 4) .thumbnail:hover {
+    img {
+      transform: scale(10) translate(3px, -80%);  
+    }
+  }
+  // 4 > last 4
+  [role="row"]:nth-last-child(n + 5) .thumbnail:hover {
+    img {
+      transform: scale(10) translate(3px, -50%);
+    }
+  }
+  
+  // First 4
+  [role="row"]:nth-child(-n+5) .thumbnail:hover {
+    img {
+      transform: scale(10) translate(3px, 0%);  
     }
   }
 
