--- a/resources/style/remake/global.scss
+++ b/resources/style/remake/global.scss
@@ -31,6 +31,19 @@ img {
   -webkit-user-drag: none;
 }
 
+a[class*="outbound"]{
+    color: var(--accent-color-blue);
+    text-decoration: none;
+    border-bottom: 2px solid var(--accent-color-blue);
+    padding-bottom: 2px;
+    transition: border-bottom 0.2s ease-in-out 0s;
+}
+
+a:hover {
+  color: var(--accent-color-blue);
+  border-color: transparent;
+}
+
 header,
 header h2 {
   font-size: 0.8125rem;
