--- a/resources/style/remake/outliner.scss
+++ b/resources/style/remake/outliner.scss
@@ -152,6 +152,8 @@
     text-overflow: ellipsis;
     white-space: nowrap;
     width: 100%;
+    line-height: 1.5;
+    padding-bottom: 2px;
   }
 
   input {
