--- a/widgets/Tag/tag.scss
+++ b/widgets/Tag/tag.scss
@@ -6,6 +6,7 @@
   display: inline-flex;
   align-items: center;
   padding: 0.375rem; //0 0.25rem 0 
+  padding-bottom: .45rem;
   border-radius: 0.125rem;
   font-size: 0.8125rem;
   margin: 0.125rem;
